k8s/gateway/gateway.yml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ecommerce-gateway
  namespace: gateway-system
spec:
  gatewayClassName: cloud-provider-kind

  listeners:
    - name: http
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: All
