k8s/gateway/airflow-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: airflow-route
  namespace: airflow

spec:
  parentRefs:
    - name: ecommerce-gateway
      namespace: gateway-system

  hostnames:
    - "airflow.ecommerce.local"

  rules:
    - backendRefs:
        - name: airflow-api-server
          port: 8080
