k8s/gateway/api-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ecommerce-api-route
  namespace: ecommerce

spec:
  parentRefs:
    - name: ecommerce-gateway
      namespace: gateway-system

  hostnames:
    - "api.ecommerce.local"

  rules:
    - backendRefs:
        - name: ecommerce-api-service
          port: 8000
